crates/bsql/tests/compile_fail/truncate_rejected.rs
fn main() {
    let _ = bsql::query!("TRUNCATE users");
}
